--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -56,13 +56,14 @@
 }
 
 .upload-button {
+    background-color: white;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
     text-align: center;
-    z-index: 1;
+    z-index: 3;
 }
 
 .centered-table {
